# fuzzyfold

./: .gitignore  Cargo.toml  LICENSE  README.md
bash_benchmarking/: eval_benchmark.sh  gen_benchmarkset.sh  simulate_benchmark.sh
crates/domainlevel/: Cargo.toml
crates/domainlevel/src/: acfps.rs  complex.rs  complexregistry.rs  domain.rs  enumerate.rs  lib.rs  pair_list.rs  reactions.rs  segments.rs  strand.rs  utils.rs
crates/domainlevel/src/checks/: cycledetection.rs  dlfolding.rs  mod.rs  partial_order.rs
crates/domainlevel/src/rules/: mod.rs  r11.rs  r12.rs  r21.rs  r22.rs  r23.rs  r24.rs  r25.rs  r26.rs  r27.rs  r28.rs  registry.rs  ruletrait.rs
crates/energy/: Cargo.toml
crates/energy/src/: coaxial_stacking.rs  commandline_utils.rs  energy_model.rs  energy_tables.rs  fuzzyeval.rs  fuzzyfold.rs  lib.rs  loop_decomposition.rs  nucleotides.rs  parameter_parsing.rs  viennarna.rs
crates/energy_model/: Cargo.toml
crates/energy_model/src/: coaxial_stacking.rs  energy_model.rs  energy_tables.rs  fuzzyfold.rs  lib.rs  loop_decomposition.rs  viennarna.rs
crates/ff_energy/: Cargo.toml
crates/ff_energy/params/: rna_andronescu2007.par  rna_turner2004.par
crates/ff_energy/src/: energy_model.rs  energy_tables.rs  lib.rs  loop_decomposition.rs  viennarna.rs
crates/ff_energy/src/loop_decomposition/: loop_decomposition.rs  loop_decomposition_trait.rs  mod.rs  nearest_neighbor_loop.rs
crates/ff_energy/src/nn_models/: coaxial_stacking.rs  fuzzyeval.rs  mod.rs  viennarna.rs
crates/ff_energy/src/nn_parsing/: energy_tables.rs  mod.rs  parameter_parsing.rs
crates/ff_energy/src/parameters/: mod.rs
crates/ff_kinetics/: Cargo.toml
crates/ff_kinetics/benches/: exit_macrostates.rs  macrostates.rs  stochastic_simulation.rs
crates/ff_kinetics/benches/data/: benchmark_random_structures_len100.vrna  benchmark_random_structures_len50.vrna  benchmark_random_structures_len500.vrna  benchmark_random_structures_len750.vrna
crates/ff_kinetics/src/: commit_and_delay.rs  lib.rs  loop_structure.rs  macrostates.rs  rate_model.rs  reaction.rs  stochastic_simulation.rs  timeline.rs  timeline_io.rs  timeline_plotting.rs
crates/ff_kinetics/src/commit_and_delay/: exit_macrostates.rs  mod.rs  model.rs
crates/ff_plotting/: Cargo.toml
crates/ff_structure/: Cargo.toml
crates/ff_structure/src/: dotbracket.rs  error.rs  lib.rs  loop_table.rs  multi_pair_table.rs  neighbors.rs  pair_table.rs
crates/fuzzyfold/: Cargo.toml
crates/fuzzyfold/src/: energy_parsers.rs  input_parsers.rs  kinetics_parsers.rs  lib.rs
crates/kinetics/: Cargo.toml
crates/kinetics/benches/: stochastic_simulation.rs
crates/kinetics/benches/data/: benchmark_random_structures_len1000.vrna  benchmark_random_structures_len250.vrna  benchmark_random_structures_len2500.vrna
crates/kinetics/src/: coaxial_stacking.rs  commandline_utils.rs  energy_model.rs  energy_tables.rs  lib.rs  loop_decomposition.rs  loop_structure.rs  macrostates.rs  parameter_parsing.rs  plotting.rs  stochastic_simulation.rs  timeline.rs  utils.rs  vrna_parsing.rs
crates/plotting/: Cargo.toml
crates/plotting/src/: main.rs
crates/structure/src/: dotbracket.rs  error.rs  lib.rs  loop_table.rs  multi_pair_table.rs  pair_list.rs  pair_table.rs  representations.rs
my_file/: Cargo.toml
my_file/src/: main.rs
