[workspace]
members = ["crates/*"]
exclude = ["crates/ff_plotting"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
description = "Stochastic nucleic acid folding kinetics."
repository = "https://github.com/bad-ants-fleet/fuzzyfold"
documentation = "https://docs.rs/fuzzyfold"
keywords = ["science", "bioinformatics", "nucleic acids", "RNA", "DNA"]
categories = ["science"]
readme = "README.md"

[workspace.dependencies]
# local crates
ff_energy    = { path = "./crates/ff_energy", version = "0.0.0" }
ff_structure = { path = "./crates/ff_structure", version = "0.0.0" }
ff_kinetics  = { path = "./crates/ff_kinetics", version = "0.0.0" }

# shared crates
ahash = "0.8.12"
anyhow = "1.0.100"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
criterion = "0.7.0"
env_logger = "0.11.8"
log = "0.4.28"
nohash-hasher = "0.2.0"
paste = "1.0.15"
plotters = "0.3.7"
rand = "0.9.2"
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = "1.0.225"
serde_json = "1.0.145"


