[workspace]
members = ["crates/*"]
exclude = ["crates/ff_plotting"]
default-members = ["crates/fuzzyfold"]
resolver = "3"

[workspace.package]
description = "Nucleic acid secondary structure kinetics."

edition = "2024"
license = "MIT"
repository = "https://github.com/bad-ants-fleet/fuzzyfold"
documentation = "https://docs.rs/fuzzyfold"
keywords = ["dna", "rna", "secondary-structure", "kinetics", "nearest-neighbor"]
categories = [
    "science",
    "science::bioinformatics",
    "science::bioinformatics::genomics",
    "science::bioinformatics::sequence-analysis",
]

[workspace.dependencies]
# local crates
ff_energy    = { path = "./crates/ff_energy", version = "0.1.1" }
ff_structure = { path = "./crates/ff_structure", version = "0.1.1" }
ff_kinetics  = { path = "./crates/ff_kinetics", version = "0.1.1" }

# shared crates
ahash = "0.8.12"
colored = "3.0.0"
criterion = "0.7.0"
env_logger = "0.11.8"
log = "0.4.28"
nohash-hasher = "0.2.0"
plotters = "0.3.7"
rand = "0.9.2"
serde = "1.0.225"
serde_json = "1.0.145"

