[package]
name = "ff_kinetics"
version = "0.0.0"
publish = false

edition.workspace = true

[dependencies]
ff_structure.workspace = true
ff_energy.workspace = true

ahash.workspace = true
criterion.workspace = true
nohash-hasher.workspace = true
plotters.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bench]]
name = "stochastic_simulation"
harness = false
