[package]
name = "ff_kinetics"
version = "0.1.1"
description = "fuzzyfold's stochastic secondary structure simulations."
readme = "../../README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
ff_structure.workspace = true
ff_energy.workspace = true

ahash.workspace = true
criterion.workspace = true
nohash-hasher.workspace = true
plotters.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bench]]
name = "stochastic_simulation"
harness = false
