[package]
name = "ff_structure"
version = "0.1.0"
description = "fuzzyfold's secondary structure representations."
readme = "../../README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
