[package]
name = "fuzzyfold"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
doctest = false
path = "src/lib.rs"

[dependencies]
ff_structure.workspace = true
ff_energy.workspace = true
ff_kinetics.workspace = true

serde.workspace = true
serde_json.workspace = true
clap.workspace = true
rand.workspace = true
log.workspace = true
colored.workspace = true
env_logger.workspace = true
anyhow.workspace = true
rayon.workspace = true
paste.workspace = true

indicatif = "0.18.0"

[badges]
maintenance = { status = "actively-developed" }


