[package]
name = "fuzzyfold"
version = "0.1.0"
description.workspace = true
readme = "../../README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
# Experimental code project.
name = "ff-reval"
path = "src/bin/ff-reval.rs"
publish = false

[dependencies]
ff_structure.workspace = true
ff_energy.workspace = true
ff_kinetics.workspace = true

colored.workspace = true
env_logger.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

anyhow = "1.0.100"
clap = { version = "4.5.47", features = ["derive"] }
indicatif = "0.18.0"
paste = "1.0.15"
rayon = "1.11.0"

[badges]
maintenance = { status = "actively-developed" }

