[package]
name = "kinetics"
version = "0.1.0"
edition = "2024"

[dependencies]
nohash-hasher = "0.2.0"
rustc-hash = "2.1.1"
structure = { path = "../structure" }
energy = { path = "../energy" }
rand = "0.9.2"
clap = "4.5.47"
anyhow = "1.0.99"
colored = "3.0.0"
criterion = "0.7.0"
ahash = "0.8.12"
rayon = "1.11.0"
plotters = "0.3.7"
serde = "1.0.225"
serde_json = "1.0.145"

[[bench]]
name = "stochastic_simulation"
harness = false
